--- a/client/src/pages/sign-in-admin/index.scss
+++ b/client/src/pages/sign-in-admin/index.scss
@@ -1,6 +1,6 @@
 #admin-signin {
   padding: 100px;
-  background-image: url("../../../assets/images/bg-not-found.png");
+  height: 100vh;
   .alert {
     display: flex;
     justify-content: center;
