--- a/client/src/pages/admin/patients-list/index.scss
+++ b/client/src/pages/admin/patients-list/index.scss
@@ -1,3 +1,331 @@
-#patients-list{
-    padding: 60px 0;
+#patients-list {
+  padding: 60px 0;
+  .patients {
+    margin-left: 290px;
+    padding: 0 20px;
+    h1 {
+      margin-top: 20px;
+      letter-spacing: 0.5px;
+      font-size: 24px;
+      line-height: 1.5;
+      font-weight: 600;
+    }
+    .links {
+      padding: 8px 5px;
+      border-radius: 5px;
+      display: flex;
+      text-align: center;
+      column-gap: 15px;
+      margin-top: 10px;
+      span {
+        display: flex;
+        align-items: center;
+        column-gap: 10px;
+        a {
+          color: #212529;
+          font-size: 12px;
+          font-weight: 500;
+          letter-spacing: 1px;
+          transition: all 0.5s;
+          &.active {
+            color: #396cf0;
+          }
+          &:hover {
+            color: #396cf0;
+          }
+        }
+        .antd-icon {
+          font-size: 8px;
+          font-weight: 600;
+        }
+      }
+    }
+    .patients-list {
+      width: 100%;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 20px;
+      margin-top: 10px;
+      .patient {
+        width: 23.5%;
+        height: auto;
+        transition: all 0.5s;
+        .card {
+          box-shadow: 0 0 2px 0px rgba(0, 0, 0, 0.15);
+          border-radius: 5px;
+          transition: all 0.5s;
+          .image {
+            display: flex;
+            justify-content: center;
+            position: relative;
+            img {
+              width: 100%;
+              border-top-left-radius: 5px;
+              border-top-right-radius: 5px;
+              transition: all 0.4s;
+            }
+            .card-icons {
+              display: none;
+              margin-top: 20px;
+              position: absolute;
+              left: 10px;
+              bottom: 10px;
+              transition: all 0.5s;
+              .circle {
+                margin-top: 8px;
+                width: 36px;
+                height: 36px;
+                border-radius: 50%;
+                background-color: #396cf01a;
+                background-color: rgba(57, 108, 240, 0.1);
+                border: 1px solid rgba(57, 108, 240, 0.1);
+                -webkit-box-shadow: 0 3px 5px 0 rgb(57 108 240 / 30%);
+                box-shadow: 0 3px 5px 0 rgb(57 108 240 / 30%);
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                cursor: pointer;
+                transition: all 0.5s;
+                .fa-brands {
+                  color: #396cf0;
+                  font-size: 13px;
+                  transition: all 0.4s;
+                }
+                &:hover {
+                  background-color: #396cf0;
+                  .fa-brands {
+                    color: #fff;
+                  }
+                }
+              }
+            }
+          }
+          .about-patient {
+            padding: 30px;
+            -webkit-transition: all 0.5s;
+            transition: all 0.5s;
+            border-bottom-left-radius: 5px;
+            border-bottom-right-radius: 5px;
+            h4 {
+              text-align: center;
+              a {
+                font-weight: 600;
+                font-size: 16px;
+                line-height: 1.2;
+                color: black;
+              }
+            }
+            a {
+              color: #8492a6;
+              font-size: 14px;
+              margin-top: 10px;
+              display: flex;
+              justify-content: center;
+            }
+          }
+          &:hover {
+            .about-patient {
+              background-color: #305ccc;
+              h4 {
+                a {
+                  color: #fff;
+                }
+              }
+              a {
+                color: #fff;
+              }
+            }
+          }
+        }
+        .btn {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          column-gap: 10px;
+          margin-top: 20px;
+          width: 100%;
+          .deleteBtn {
+            padding: 10px 20px;
+            outline: 0;
+            width: 45%;
+            cursor: pointer;
+            font-size: 15px;
+            -webkit-transition: all 0.4s;
+            transition: all 0.4s;
+            border-radius: 5px;
+            background-color: rgba(219, 33, 33, 0.5);
+            border: 1px solid rgba(240, 93, 57, 0.1);
+            color: #330202;
+            font-weight: 600;
+            box-shadow: 0 1px 3px 0 rgba(235, 75, 75, 0.3);
+            font-size: 15px;
+            &:hover {
+              background-color: #d41010e1;
+              color: #fff;
+            }
+          }
+          .editBtn {
+            padding: 10px 20px;
+            outline: 0;
+            width: 45%;
+            cursor: pointer;
+            -webkit-transition: all 0.4s;
+            transition: all 0.4s;
+            border-radius: 5px;
+            background-color: rgba(32, 173, 72, 0.493);
+            border: 1px solid rgba(57, 240, 139, 0.1);
+            color: #01290e;
+            box-shadow: 0 1px 3px 0 rgba(145, 247, 199, 0.253);
+            font-weight: 600;
+            font-size: 15px;
+            &:hover {
+              background-color: #085726e1;
+              color: #fff;
+            }
+          }
+        }
+      }
+    }
+  }
+  #update-patient {
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    top: 0px;
+    z-index: 6;
+    background-color: rgba(0, 0, 0, 0.397);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    form {
+      box-shadow: 0px 0px 3px 0px rgba(60, 72, 88, 0.15);
+      border-radius: 5px;
+      background-color: #fff;
+      padding: 30px 50px;
+      width: 600px;
+
+      .close {
+        text-align: end;
+        font-size: 26px;
+        color: #000000;
+        cursor: pointer;
+      }
+      .form {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        column-gap: 30px;
+
+        .left,
+        .right {
+          width: 50%;
+          .input-control {
+            margin-top: 20px;
+            p {
+              margin: 8px 0;
+              label {
+                font-size: 14px;
+              }
+            }
+            input {
+              height: 20px;
+              border: 1px solid #d9d9d9;
+              width: 100%;
+              padding: 18px 11px;
+              border-radius: 6px;
+              font-size: 14px;
+              outline: 0;
+
+              &:hover {
+                border: 1px solid #396cf0;
+              }
+              &:focus {
+                border: 1px solid #396cf0;
+              }
+              &::placeholder {
+                color: rgba(0, 0, 0, 0.623);
+              }
+            }
+            select {
+              width: 100%;
+              border: 1px solid #d9d9d9;
+              padding: 10px 5px;
+              border-radius: 6px;
+              font-size: 14px;
+              outline: 0;
+              &:hover {
+                border: 1px solid #396cf0;
+              }
+              &:focus {
+                border: 1px solid #396cf0;
+              }
+              &::placeholder {
+                color: rgba(0, 0, 0, 0.623);
+              }
+            }
+          }
+          .input-image {
+            margin-top: 20px;
+            p {
+              margin: 8px 0;
+              label {
+                font-size: 14px;
+              }
+            }
+            input {
+              color: transparent;
+              width: 100%;
+              height: 20px;
+              border: 1px solid #d9d9d9;
+              padding: 18px 11px;
+              border-radius: 6px;
+              font-size: 14px;
+              outline: 0;
+              display: flex;
+              justify-self: center;
+              align-items: center;
+              &::-webkit-file-upload-button {
+                visibility: hidden;
+              }
+              &::before {
+                content: "Select some files";
+                color: rgba(0, 0, 0, 0.726);
+                cursor: pointer;
+                white-space: nowrap;
+                text-shadow: 1px 1px #fff;
+                font-weight: 600;
+                margin-top: -8px;
+              }
+            }
+          }
+        }
+      }
+      .btn {
+        margin-top: 20px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        button {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          width: 100%;
+          color: #fff;
+          background-color: #396cf0;
+          box-shadow: 0 2px 0 rgb(5 145 255 / 10%);
+          font-size: 14px;
+          height: 32px;
+          padding: 20px 15px;
+          border-radius: 6px;
+          outline: 0;
+          border: 0;
+          cursor: pointer;
+          transition: all 0.4s;
+          &:hover {
+            background-color: #305ccc;
+          }
+        }
+      }
+    }
+  }
 }
