--- a/client/src/pages/site/sign-up/index.scss
+++ b/client/src/pages/site/sign-up/index.scss
@@ -81,8 +81,44 @@
         column-gap: 30px;
         width: 100%;
       }
+      .input-image {
+        margin-top: 20px;
+        width: 50%;
+        p {
+          margin: 8px 0;
+          label {
+            font-size: 14px;
+          }
+        }
+        input {
+          color: transparent;
+          width: 100%;
+          height: 20px;
+          border: 1px solid #d9d9d9;
+          padding: 18px 11px;
+          border-radius: 6px;
+          font-size: 14px;
+          outline: 0;
+          display: flex;
+          justify-self: center;
+          align-items: center;
+          &::-webkit-file-upload-button {
+            visibility: hidden;
+          }
+          &::before {
+            content: "Select some files";
+            color: rgba(0, 0, 0, 0.726);
+            cursor: pointer;
+            white-space: nowrap;
+            text-shadow: 1px 1px #fff;
+            font-weight: 600;
+            margin-top: -8px;
+          }
+        }
+      }
       .input-control {
         margin-top: 20px;
+        width: 50%;
         p {
           margin: 8px 0;
           label {
@@ -130,9 +166,11 @@
       .for-select {
         display: flex;
         justify-content: space-between;
+        column-gap: 30px;
         width: 100%;
         .select {
           margin-top: 30px;
+          width: 50%;
           select {
             width: 100%;
             border: 1px solid #d9d9d9;
