--- a/client/src/pages/admin/patients-list/index.scss
+++ b/client/src/pages/admin/patients-list/index.scss
@@ -60,6 +60,7 @@
             position: relative;
             img {
               width: 100%;
+              height: 100%;
               border-top-left-radius: 5px;
               border-top-right-radius: 5px;
               transition: all 0.4s;
