--- a/client/src/pages/site/sign-up/index.scss
+++ b/client/src/pages/site/sign-up/index.scss
@@ -88,6 +88,12 @@
           margin: 8px 0;
           label {
             font-size: 14px;
+            .required {
+              color: #f0735a;
+              font-size: 15px;
+              font-weight: 600;
+              margin: 2px 5px;
+            }
           }
         }
         input {
